- disable email in create account activity  + Sign out  + drugs list in patient activity  + add drug to patient activity
 --still need add notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
         android:theme="@style/Theme.TakeCare"
         tools:targetApi="31">
         <activity
+            android:name=".ui.medicine.CreateMedicineActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.supervisor.EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".ui.patient.EditPatientProfileActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.patient.PatientActivity"
             android:exported="false"
@@ -33,7 +35,6 @@
         <activity
             android:name=".ui.CreateAccount.CreateAccountActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.CreateAccount.CreatePatientAccountActivity"
             android:exported="false" />
