--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeCare"
         tools:targetApi="31">
+        <service
+            android:name=".service.BackService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".ui.medicine.CreateMedicineActivity"
             android:exported="false" />
