--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeCare"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TakeCare.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name=".service.BackService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".ui.medicine.CreateMedicineActivity"
+            android:label="Add Drug"
             android:exported="false" />
         <activity
             android:name=".ui.supervisor.EditProfileActivity"
+            android:label="Edit Profile"
             android:exported="false" />
         <activity
             android:name=".ui.patient.EditPatientProfileActivity"
+            android:label="Edit Patient Profile"
             android:exported="false" />
         <activity
             android:name=".ui.patient.PatientActivity"
@@ -39,20 +53,16 @@
             android:theme="@style/Theme.TakeCare.NoActionBar" />
         <activity
             android:name=".ui.CreateAccount.CreateAccountActivity"
+            android:label="Create Account"
             android:exported="false" />
         <activity
             android:name=".ui.CreateAccount.CreatePatientAccountActivity"
+            android:label="Create Patient Account"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.TakeCare.NoActionBar"></activity>
     </application>
 
 </manifest>
